fix when scrollbar appears on Lexemes List

--- a/src/pages/Lexicon/LexemesList/LexemesList.less
+++ b/src/pages/Lexicon/LexemesList/LexemesList.less
@@ -1,7 +1,7 @@
 .lexemes-list {
 
   cursor    : pointer;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   li {
     border-block: var(--border-width) solid var(--gray-1);
